@@ -4,6 +4,8 @@ grub2 (2.00-13) UNRELEASED; urgency=low
     - Fix booting FreeBSD >= 9.1 amd64 kernels (closes: #699002).
   * Stop using the /usr/share/images/desktop-base/desktop-grub.png
     alternative as the fallback background if GRUB_DISTRIBUTOR is "Ubuntu".
+  * Merge from Ubuntu:
+    - source_grub2.py: Use attach_default_grub from apport's hookutils.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 28 Jan 2013 11:08:07 +0000
 
